--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       rel="icon"
       href="https://platform-s3-publicread.s3.eu-central-1.amazonaws.com/openfabric/RoundLogo.png"
     />
-    <title>Openfabric<!-- --> | <!-- -->Staking</title>
+    <title>Fabric AI</title>
     <link
       rel="stylesheet"
       data-href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap"
@@ -215,7 +215,7 @@
           >
             <a href="/"
               ><img
-                src="https://openfabric.ai/openfabric-logo-2x.png"
+                src="./assets/logo.png"
                 class="mx-auto"
                 alt="Openfabric"
                 width="175"
